--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -24,7 +24,7 @@
     {% endblock  %}
     </div>
     <div class="footer">
-        Copyright © 2021 STARK Industries Limited, Developed by JAYASHREE RAO
+        Copyright © 2021 STARK Industries Limited, Developed by vignesh
     </div>
     </div>
 </body>
